--- a/javascripts/discourse/connectors/above-main-container/homepage-banner.hbs
+++ b/javascripts/discourse/connectors/above-main-container/homepage-banner.hbs
@@ -1,6 +1,6 @@
-{{#if (eq currentPath "discovery.latest")}}
+{{#if (eq this.currentPath "discovery.latest")}}
   <div id="banner">
-    <div class="floated-buttons">
+        <div class="floated-buttons">
       <button class="btn no-text btn-icon btn-transparent close" title="Dismiss this banner" type="button">
         {{d-icon "xmark"}}
         <span aria-hidden="true">&ZeroWidthSpace;</span>
@@ -14,4 +14,3 @@
     </div>
   </div>
 {{/if}}
-
