--- a/common/common.scss
+++ b/common/common.scss
@@ -1,3 +1,8 @@
+.sidebar-section-link-wrapper .sidebar-section-link .sidebar-section-link-content-text {
+    font-family: Inter, Arial, sans-serif;
+    font-size: 14px;
+}
+
 #banner {
   display: none;
 }
