--- a/common/common.scss
+++ b/common/common.scss
@@ -31,7 +31,7 @@
 // --------------------------------------------------
 #banner {
   padding: 1em;
-  background: var(--tertiary-low);
+  background: #FAF7F5;
   color: var(--primary);
   z-index: z("base") + 1;
   margin-bottom: 1em;
